kustomize/overlays/prod/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itassets-deployment
spec:
  selector:
    matchLabels:
      app: itassets-deployment
  template:
    metadata:
      labels:
        app: itassets-deployment
    spec:
      containers:
      - name: itassets
        imagePullPolicy: IfNotPresent
