kustomize/overlays/prod/clusterip_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: itassets-clusterip
spec:
  type: ClusterIP
  selector:
    app: itassets
    variant: prod
