kustomize/overlays/prod/postgres_fdw_service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: itassets-postgres-fdw
spec:
  selector:
    app: itassets-postgres-fdw
    variant: prod
