kustomize/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: itassets-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: itassets.dbca.wa.gov.au
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: itassets-clusterip-prod
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: addressbook-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: addressbook.dbca.wa.gov.au
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: itassets-clusterip-prod
            port:
              number: 8080
